Establish the font-size for all devices as 16px; enlarged <p> font-size for devices <767px; added text to project2; created scripts.js

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       <div class="container">
         <a href="#home">
           <picture>
-            <source srcset="images/logo/logo35@1x.png 1x, images/logo/logo35@2x.png 2x, images/logo/logo35@3x.png 3x" media="(max-width: 575px)">
-            <source srcset="images/logo/logo70@1x.png 1x, images/logo/logo70@2x.png 2x, images/logo/logo70@3x.png 3x" media="(max-width: 1199px)">
-            <source srcset="images/logo/logo100@1x.png 1x, images/logo/logo100@2x.png 2x, images/logo/logo100@3x.png 3x" media="(min-width: 1200px)">
-            <img src="images/logo/logo100@1x.png" srcset="images/logo/logo100@1x.png 1x, images/logo/>logo100@2x.png 2x, images/logo/Logo100@3x.png 3x" class="logo" alt="logo">
+            <source srcset="images/logo/logo35@1x.png 1x, images/logo/logo35@2x.png 2x, images/logo/logo35@3x.png 3x" media="(max-width: 991px)">
+            <source srcset="images/logo/logo70@1x.png 1x, images/logo/logo70@2x.png 2x, images/logo/logo70@3x.png 3x" media="(min-width: 992px)">
+            <img src="images/logo/logo70@1x.png" srcset="images/logo/logo70@1x.png 1x, images/logo/>logo70@2x.png 2x, images/logo/Logo70@3x.png 3x" class="logo" alt="logo">
           </picture>
         </a>
         <nav>
@@ -63,7 +62,7 @@
             <img src="images/project2/home_page2@1x.png" srcset="images/project2/home_page2@1x.png 1x, images/project2/home_page2@2x.png 2x, images/project2/home_page2@3x.png 3x" alt="Fitted App">
           </div>
           <div class="content-block effect">
-        	  <p>UX Project Fitted helps to become healthy. This app is for people who are new or returning to a sports activity. 2018</p>
+        	  <p>UI Project Fitted helps to become healthy. This app is for people who are new or returning to a sports activity. 2018</p>
           </div>
         </a>
 
@@ -106,10 +105,10 @@
       <div class="line_f">
 	     <div class="pic">
          <picture>
-           <source srcset="images/about_me/1_about_me200@1x.png 1x, images/about_me/1_about_me200@2x.png 2x, images/about_me/1_about_me200@3x.png 3x" media="(max-width: 575px)">
-           <source srcset="images/about_me/1_about_me300@1x.png 1x, images/about_me/1_about_me300@2x.png 2x, images/about_me/1_about_me300@3x.png 3x" media="(max-width: 991px)">
-           <source srcset="images/about_me/1_about_me400@1x.png 1x, images/about_me/1_about_me400@2x.png 2x, images/about_me/1_about_me400@3x.png 3x" media="(max-width: 1199px)">
-           <source srcset="images/about_me/1_about_me600@1x.png 1x, images/about_me/1_about_me600@2x.png 2x, images/about_me/1_about_me600@3x.png 3x" media="(min-width: 1200px)">
+           <source srcset="images/about_me/1_about_me200@1x.png 1x, images/about_me/1_about_me200@2x.png 2x, images/about_me/1_about_me200@3x.png 3x" media="(max-width: 767px)">
+           <source srcset="images/about_me/1_about_me300@1x.png 1x, images/about_me/1_about_me300@2x.png 2x, images/about_me/1_about_me300@3x.png 3x" media="(max-width: 1199px)">
+           <source srcset="images/about_me/1_about_me400@1x.png 1x, images/about_me/1_about_me400@2x.png 2x, images/about_me/1_about_me400@3x.png 3x" media="(max-width: 1200px)">
+           <source srcset="images/about_me/1_about_me600@1x.png 1x, images/about_me/1_about_me600@2x.png 2x, images/about_me/1_about_me600@3x.png 3x" media="(min-width: 1400px)">
            <img class="line_s_picture" src="images/about_me/1_about_me600@1x.png" srcset="images/about_me/1_about_me600@1x.png 1x, images/about_me/1_about_me600@2x.png 2x, images/about_me/1_about_me600@3x.png 3x" alt="Guys with laptop">
          </picture>
 		   </div>
@@ -128,10 +127,10 @@
 
         <div class="pic">
           <picture>
-            <source srcset="images/about_me/2_about_me200@1x.png 1x, images/about_me/2_about_me200@2x.png 2x, images/about_me/2_about_me200@3x.png 3x" media="(max-width: 575px)">
-            <source srcset="images/about_me/2_about_me300@1x.png 1x, images/about_me/2_about_me300@2x.png 2x, images/about_me/2_about_me300@3x.png 3x" media="(max-width: 991px)">
-            <source srcset="images/about_me/2_about_me400@1x.png 1x, images/about_me/2_about_me400@2x.png 2x, images/about_me/2_about_me400@3x.png 3x" media="(max-width: 1199px)">
-            <source srcset="images/about_me/2_about_me600@1x.png 1x, images/about_me/2_about_me600@2x.png 2x, images/about_me/2_about_me600@3x.png 3x" media="(min-width: 1200px)">
+            <source srcset="images/about_me/2_about_me200@1x.png 1x, images/about_me/2_about_me200@2x.png 2x, images/about_me/2_about_me200@3x.png 3x" media="(max-width: 767px)">
+            <source srcset="images/about_me/2_about_me300@1x.png 1x, images/about_me/2_about_me300@2x.png 2x, images/about_me/2_about_me300@3x.png 3x" media="(max-width: 1199px)">
+            <source srcset="images/about_me/2_about_me400@1x.png 1x, images/about_me/2_about_me400@2x.png 2x, images/about_me/2_about_me400@3x.png 3x" media="(max-width: 1200px)">
+            <source srcset="images/about_me/2_about_me600@1x.png 1x, images/about_me/2_about_me600@2x.png 2x, images/about_me/2_about_me600@3x.png 3x" media="(min-width: 1400px)">
             <img class="line_f_picture" src="images/about_me/2_about_me600@1x.png" srcset="images/about_me/2_about_me600@1x.png 1x, images/about_me/2_about_me600@2x.png 2x, images/about_me/2_about_me600@3x.png 3x" alt="Computer">
           </picture>
         </div>
@@ -140,10 +139,10 @@
     <div class="line_f">
 		  <div class="pic">
         <picture>
-          <source srcset="images/about_me/3_about_me200@1x.png 1x, images/about_me/3_about_me200@2x.png 2x, images/about_me/3_about_me200@3x.png 3x" media="(max-width: 575px)">
-          <source srcset="images/about_me/3_about_me300@1x.png 1x, images/about_me/3_about_me300@2x.png 2x, images/about_me/3_about_me300@3x.png 3x" media="(max-width: 991px)">
-          <source srcset="images/about_me/3_about_me400@1x.png 1x, images/about_me/3_about_me400@2x.png 2x, images/about_me/3_about_me400@3x.png 3x" media="(max-width: 1199px)">
-          <source srcset="images/about_me/3_about_me600@1x.png 1x, images/about_me/3_about_me600@2x.png 2x, images/about_me/3_about_me600@3x.png 3x" media="(min-width: 1200px)">
+          <source srcset="images/about_me/3_about_me200@1x.png 1x, images/about_me/3_about_me200@2x.png 2x, images/about_me/3_about_me200@3x.png 3x" media="(max-width: 767px)">
+          <source srcset="images/about_me/3_about_me300@1x.png 1x, images/about_me/3_about_me300@2x.png 2x, images/about_me/3_about_me300@3x.png 3x" media="(max-width: 1199px)">
+          <source srcset="images/about_me/3_about_me400@1x.png 1x, images/about_me/3_about_me400@2x.png 2x, images/about_me/3_about_me400@3x.png 3x" media="(max-width: 1200px)">
+          <source srcset="images/about_me/3_about_me600@1x.png 1x, images/about_me/3_about_me600@2x.png 2x, images/about_me/3_about_me600@3x.png 3x" media="(min-width: 1400px)">
           <img class="line_s_picture" src="images/about_me/3_about_me600@1x.png" srcset="images/about_me/3_about_me600@1x.png 1x, images/about_me/3_about_me600@2x.png 2x, images/about_me/3_about_me600@3x.png 3x" alt="Computer">
         </picture>
 		  </div>
@@ -162,10 +161,10 @@
 
 		  <div class="pic">
         <picture>
-          <source srcset="images/about_me/4_about_me200@1x.png 1x, images/about_me/4_about_me200@2x.png 2x, images/about_me/4_about_me200@3x.png 3x" media="(max-width: 575px)">
-          <source srcset="images/about_me/4_about_me300@1x.png 1x, images/about_me/4_about_me300@2x.png 2x, images/about_me/4_about_me300@3x.png 3x" media="(max-width: 991px)">
-          <source srcset="images/about_me/4_about_me400@1x.png 1x, images/about_me/4_about_me400@2x.png 2x, images/about_me/4_about_me400@3x.png 3x" media="(max-width: 1199px)">
-          <source srcset="images/about_me/4_about_me600@1x.png 1x, images/about_me/4_about_me600@2x.png 2x, images/about_me/4_about_me600@3x.png 3x" media="(min-width: 1200px)">
+          <source srcset="images/about_me/4_about_me200@1x.png 1x, images/about_me/4_about_me200@2x.png 2x, images/about_me/4_about_me200@3x.png 3x" media="(max-width: 767px)">
+          <source srcset="images/about_me/4_about_me300@1x.png 1x, images/about_me/4_about_me300@2x.png 2x, images/about_me/4_about_me300@3x.png 3x" media="(max-width: 1199px)">
+          <source srcset="images/about_me/4_about_me400@1x.png 1x, images/about_me/4_about_me400@2x.png 2x, images/about_me/4_about_me400@3x.png 3x" media="(max-width: 1200px)">
+          <source srcset="images/about_me/4_about_me600@1x.png 1x, images/about_me/4_about_me600@2x.png 2x, images/about_me/4_about_me600@3x.png 3x" media="(min-width: 1400px)">
           <img class="line_f_picture" src="images/about_me/4_about_me600@1x.png" srcset="images/about_me/4_about_me600@1x.png 1x, images/about_me/4_about_me600@2x.png 2x, images/about_me/4_about_me600@3x.png 3x" alt="Affinity map">
         </picture>
 		  </div>
@@ -174,10 +173,10 @@
     <div class="line_f">
      <div class="pic">
        <picture>
-         <source srcset="images/about_me/5_about_me200@1x.png 1x, images/about_me/5_about_me200@2x.png 2x, images/about_me/5_about_me200@3x.png 3x" media="(max-width: 575px)">
-         <source srcset="images/about_me/5_about_me300@1x.png 1x, images/about_me/5_about_me300@2x.png 2x, images/about_me/5_about_me300@3x.png 3x" media="(max-width: 991px)">
-         <source srcset="images/about_me/5_about_me400@1x.png 1x, images/about_me/5_about_me400@2x.png 2x, images/about_me/5_about_me400@3x.png 3x" media="(max-width: 1199px)">
-         <source srcset="images/about_me/5_about_me600@1x.png 1x, images/about_me/5_about_me600@2x.png 2x, images/about_me/5_about_me600@3x.png 3x" media="(min-width: 1200px)">
+         <source srcset="images/about_me/5_about_me200@1x.png 1x, images/about_me/5_about_me200@2x.png 2x, images/about_me/5_about_me200@3x.png 3x" media="(max-width: 767px)">
+         <source srcset="images/about_me/5_about_me300@1x.png 1x, images/about_me/5_about_me300@2x.png 2x, images/about_me/5_about_me300@3x.png 3x" media="(max-width: 1199px)">
+         <source srcset="images/about_me/5_about_me400@1x.png 1x, images/about_me/5_about_me400@2x.png 2x, images/about_me/5_about_me400@3x.png 3x" media="(max-width: 1200px)">
+         <source srcset="images/about_me/5_about_me600@1x.png 1x, images/about_me/5_about_me600@2x.png 2x, images/about_me/5_about_me600@3x.png 3x" media="(min-width: 1400px)">
          <img class="line_s_picture" src="images/about_me/5_about_me600@1x.png" srcset="images/about_me/5_about_me600@1x.png 1x, images/about_me/5_about_me600@2x.png 2x, images/about_me/5_about_me600@3x.png 3x" alt="Computer">
        </picture>
      </div>
@@ -322,5 +321,6 @@
     </g>
     </svg>
   </a>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
