--- a/project2.html
+++ b/project2.html
@@ -14,10 +14,9 @@
       <div class="container">
         <a href="index.html#home">
           <picture>
-            <source srcset="images/logo/logo35@1x.png 1x, images/logo/logo35@2x.png 2x, images/logo/logo35@3x.png 3x" media="(max-width: 575px)">
-            <source srcset="images/logo/logo70@1x.png 1x, images/logo/logo70@2x.png 2x, images/logo/logo70@3x.png 3x" media="(max-width: 1199px)">
-            <source srcset="images/logo/logo100@1x.png 1x, images/logo/logo100@2x.png 2x, images/logo/logo100@3x.png 3x" media="(min-width: 1200px)">
-            <img src="images/logo/logo100@1x.png" srcset="images/logo/logo100@1x.png 1x, images/logo/>logo100@2x.png 2x, images/logo/Logo100@3x.png 3x" class="logo" alt="logo">
+            <source srcset="images/logo/logo35@1x.png 1x, images/logo/logo35@2x.png 2x, images/logo/logo35@3x.png 3x" media="(max-width: 991px)">
+            <source srcset="images/logo/logo70@1x.png 1x, images/logo/logo70@2x.png 2x, images/logo/logo70@3x.png 3x" media="(min-width: 992px)">
+            <img src="images/logo/logo70@1x.png" srcset="images/logo/logo70@1x.png 1x, images/logo/>logo70@2x.png 2x, images/logo/Logo70@3x.png 3x" class="logo" alt="logo">
           </picture>
         </a>
         <nav>
@@ -30,7 +29,7 @@
 
   <section id="container-project">
     <div class="project-wrap">
-      <h1 class="title-project">Fitted Application</h1>
+      <h1 class="title-project">UI Project "Fitted Application"</h1>
       <img src="images/project2/1@1x.png" srcset="images/project2/1@1x.png 1x, images/project2/1@2x.png 2x, images/project2/1@3x.png 3x" alt="Mobile mockup with screen of Fitted App">
     </div>
     <div class="project-text">
@@ -45,23 +44,34 @@
       <h2>Low-Fidelity Prototypes</h2>
       <img src="images/project2/2@1x.png" srcset="images/project2/2@1x.png 1x, images/project2/2@2x.png 2x, images/project2/2@3x.png 3x" alt="Brief of Fitted App">
     </div>
-    <div class="project-wrap">
-      <img src="images/project2/3@1x.png" srcset="images/project2/3@1x.png 1x, images/project2/3@2x.png 2x, images/project2/3@3x.png 3x" alt="Low-fidelity paper prototypes for mobile of Fitted App">
-    </div>
-    <div class="project-wrap">
-      <img src="images/project2/4@1x.png" srcset="images/project2/4@1x.png 1x, images/project2/4@2x.png 2x, images/project2/4@3x.png 3x" alt="Low-fidelity paper prototypes for mobile of Fitted App">
+    <div class="project-text">
+      <p>During the creating low-fidelity prototypes for mobile, I was trying to make a simple Sign Up Page and Log In Page; make a not boring menu adding the icons.</p>
     </div>
     <div class="project-wrap">
       <h2>Mid-Fidelity Prototypes</h2>
       <img src="images/project2/5@1x.png" srcset="images/project2/5@1x.png 1x, images/project2/5@2x.png 2x, images/project2/5@3x.png 3x" alt="Low-fidelity paper prototypes for mobile of Fitted App">
     </div>
+    <div class="project-text">
+      <h3>Interactions</h3>
+      <p>When I Developed mid-fidelity prototypes I signed interactions such scroll between Home Page and Menu, clicks and transitions between the pages, hidden functions. At this step already I added UI elements as a circle diagram for user's usability.</p>
+    </div>
     <div class="project-wrap">
       <h2>Moodboard</h2>
       <img src="images/project2/6@1x.png" srcset="images/project2/6@1x.png 1x, images/project2/6@2x.png 2x, images/project2/6@3x.png 3x" alt="Mid-fidelity prototypes for mobile of Fitted App">
     </div>
+    <div class="project-text">
+      <h3>Why I choosed this moodboard</h3>
+      <p>Orange colour promotes a feeling of general health and emotional energy. The value of the orange colour is stimulating, bright.
+        <br>Blue - loyalty, communication.Blue is the favorite color for most people. Blue creates an excellent color combination with shades of gray.
+        <br>When using the blue colour as the base color, the orange color is perfect as an active color.
+        <br>Typography Archivo Black/Archivo Narrow/Arial are an excellent combination for a sports theme.</p>
+    </div>
     <div class="project-wrap">
       <h2>Logo</h2>
       <img src="images/project2/7@1x.png" srcset="images/project2/7@1x.png 1x, images/project2/7@2x.png 2x, images/project2/7@3x.png 3x" alt="Moodboard of Fitted App">
+    </div>
+    <div class="project-text">
+      <p>For creating the logo I followed by last  trends of spring'18 and used imposition of a photo on typography.</p>
     </div>
     <div class="project-wrap">
       <h2>High-Fidelity Prototypes</h2>
@@ -76,13 +86,35 @@
     <div class="project-wrap">
       <img src="images/project2/10@1x.png" srcset="images/project2/10@1x.png 1x, images/project2/10@2x.png 2x, images/project2/10@3x.png 3x" alt="High-fidelity prototypes for desktop of Fitted App">
     </div>
+    <div class="project-text">
+      <h3>Used Tools</h3>
+      <p>For creating high-fidelity prototypes I used Sketch and InVision. I think that is a brilliant idea to create interactive prototypes for clearly understanding the scrolls, clicks, transitions as for usability testing as for showing to stakeholders as a prototype project.</p>
+    </div>
     <div class="project-wrap">
       <h2>Style Guide</h2>
       <img src="images/project2/11@1x.png" srcset="images/project2/11@1x.png 1x, images/project2/11@2x.png 2x, images/project2/11@3x.png 3x" alt="Style guide of Fitted App">
     </div>
+    <div class="project-text">
+      <h3>Do's for Style Guide</h3>
+      <p>To avoid loss of readability of the entire information block in case of an error when loading an image, it is recommended for background images to specify a background colour using the background-colour property.
+      <br>It should be possible to change the font size (except text images) without loss of content and functionality. The text and background colour must have flexible settings, which the user can change himself.
+      <br>The text of buttons and key elements should be informative.
+      <br>All input fields must have meaningful text labels.
+      <br>Animation can be used to tweak the userʼs perception of time, not faster than 0.1 seconds and not slower 1 second. So, if we have a process that takes 5 seconds for instance (for onboarding pages), we can break it down into a few separate animations. This trick should make the process feel a lot faster and keep your user engaged.
+      <br>The font must be legible.</p>
+      <h3>Don'ts for Style Guide</h3>
+      <p>Don't stretch images.
+      <br>It is forbidden to align text with width.
+      <br>The minimum line spacing is not less than 1.5 intervals, and the interval between paragraphs is at least 1.5 times larger.
+      <br>The string cannot be longer than 70 characters.</p>
+    </div>
     <div class="project-wrap">
       <h2>Mockups</h2>
       <img src="images/project2/12@1x.png" srcset="images/project2/12@1x.png 1x, images/project2/12@2x.png 2x, images/project2/12@3x.png 3x" alt="Mobile mockups of Fitted App">
+    </div>
+    <div class="project-text">
+      <h3>Used Tools</h3>
+      <p>For creating high-fidelity prototypes I used not only Sketch and InVision, but also Flinto and Adobe After Effetcs. I think that these tools more fully show the finished project and help web developers in further coding.</p>
     </div>
     <div class="project-wrap">
       <img src="images/project2/13@1x.png" srcset="images/project2/13@1x.png 1x, images/project2/13@2x.png 2x, images/project2/13@3x.png 3x" alt="Mobile and tablet mockups of Fitted App">
