--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type=text/css href="css/normalize.css">
   <link rel="stylesheet" type=text/css href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700|Rokkitt" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -197,7 +198,7 @@
           <label>Name</label>
           <input type="text" required>
         </div>
-        <div class="group">
+        <div class="group-email">
           <label>Email</label>
           <input type="email" required>
         </div>
