--- a/project2.html
+++ b/project2.html
@@ -7,6 +7,7 @@
     <title>Skrepinskaya Natalia UX/UI Designer</title>
     <link rel="stylesheet" type=text/css href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700|Rokkitt" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -136,7 +137,7 @@
           <label>Name</label>
           <input type="text" required>
         </div>
-        <div class="group">
+        <div class="group-email">
           <label>Email</label>
           <input type="email" required>
         </div>
@@ -261,6 +262,6 @@
       </g>
     </svg>
   </a>
-
+  <script src="js/scripts.js"></script>
 </body>
 </html>
