--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <h1>Stay in Touch</h1>
     <div class="inputs">
       <form action="/send.php" method="post">
-        <div class="group">
+        <div class="group-name">
           <label>Name</label>
           <input type="text" required>
         </div>
