--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
         </div>
         <div class="group-email">
           <label>Email</label>
-          <input type="email" required>
+          <input type="email" id=email required>
         </div>
         <div class="group">
           <label>Message</label>
           <input type="text" required>
         </div>
-        <input type="submit" value="submit">
+        <input type="submit" value="submit" id="validate">
      </form>
     </div>
 
