--- a/project2.html
+++ b/project2.html
@@ -139,13 +139,13 @@
         </div>
         <div class="group-email">
           <label>Email</label>
-          <input type="email" required>
+          <input type="email" id=email required>
         </div>
         <div class="group">
           <label>Message</label>
           <input type="text" required>
         </div>
-        <input type="submit" value="submit">
+        <input type="submit" id=validate value="submit">
      </form>
     </div>
 
