fixed mistake in index.html and projects pages

--- a/project2.html
+++ b/project2.html
@@ -15,9 +15,9 @@
       <div class="container">
         <a href="index.html#home">
           <picture>
-            <source srcset="images/logo/logo35@1x.png 1x, images/logo/logo35@2x.png 2x, images/logo/logo35@3x.png 3x" media="(max-width: 991px)">
-            <source srcset="images/logo/logo70@1x.png 1x, images/logo/logo70@2x.png 2x, images/logo/logo70@3x.png 3x" media="(min-width: 992px)">
-            <img src="images/logo/logo70@1x.png" srcset="images/logo/logo70@1x.png 1x, images/logo/>logo70@2x.png 2x, images/logo/Logo70@3x.png 3x" class="logo" alt="logo">
+            <source srcset="images/logotype/logo35@1x.png 1x, images/logotype/logo35@2x.png 2x, images/logotype/logo35@3x.png 3x" media="(max-width: 991px)">
+            <source srcset="images/logotype/logo70@1x.png 1x, images/logotype/logo70@2x.png 2x, images/logotype/logo70@3x.png 3x" media="(min-width: 992px)">
+            <img src="images/logotype/logo70@1x.png" srcset="images/logotype/logo70@1x.png 1x, images/logotype/logo70@2x.png 2x, images/logotype/logo70@3x.png 3x" alt="logo">
           </picture>
         </a>
         <nav>
