--- a/project3.html
+++ b/project3.html
@@ -101,7 +101,7 @@
           <label>Message</label>
           <input type="text" required>
         </div>
-        <input type="submit" id=validate value="submit">
+        <input type="submit" value="submit" id=validate>
      </form>
     </div>
 
