--- a/project4.html
+++ b/project4.html
@@ -123,7 +123,7 @@
           <label>Message</label>
           <input type="text" required>
         </div>
-        <input type="submit" id=validate value="submit">
+        <input type="submit" value="submit" id=validate>
      </form>
     </div>
 
