Changed img in projects pages, fixed mistakes in css.

--- a/project1.html
+++ b/project1.html
@@ -28,8 +28,10 @@
   </header>
 
   <section id="container-project">
-    <div class="project-wrap">
+    <div class="project-text">
       <h1 class="title-project">UX Project Ink Tank Application</h1>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/1@1x.png" srcset="images/project1/1@1x.png 1x, images/project1/1@2x.png 2x, images/project1/1@3x.png 3x" alt="3 mockups with screen of Ink Tank App">
     </div>
     <div class="project-text">
@@ -40,8 +42,10 @@
         Low-fidelity prototyping,  Mid-fidelity prototyping, High-fidelity prototyping, Usability testing, Affinity diagram & test results, Recommendation for future design efforts,
         A/B testing, Style guide, Interactive and clickable prototype.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>User Research Analysis</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/2@1x.png" srcset="images/project1/2@1x.png 1x, images/project1/2@2x.png 2x, images/project1/2@3x.png 3x" alt="Brief of Ink Tank App">
     </div>
     <div class="project-text">
@@ -59,8 +63,10 @@
         3) Tattooed people regret the tattoo if it turned out to be a bad quality, that is, an unskilled tattoo artist. Of course, looking back, they might not have done this,
         if they had more information on tattoo artists at hand.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>User Persona</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/3@1x.png" srcset="images/project1/3@1x.png 1x, images/project1/3@2x.png 2x, images/project1/3@3x.png 3x" alt="User research analysis of Ink Tank App">
     </div>
     <div class="project-text">
@@ -68,8 +74,10 @@
          I used personas at every stage of the process and every important design question. Simply asking myself “which options would this persona enjoy most” allows me to hone in on
          creating a product that will appeal most to a specific type of persona.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>User Flow</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/4@1x.png" srcset="images/project1/4@1x.png 1x, images/project1/4@2x.png 2x, images/project1/4@3x.png 3x" alt="User persona and user flow of Ink Tank App">
     </div>
     <div class="project-text">
@@ -78,8 +86,10 @@
         My each user flow illustrates intuitive movement and 2 alternative paths.<br>
         Also, it will be better than "Chat with Clients" could be its own sub-user process. I have to be careful not overdo my design and add a bunch of extra features that are not needed.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Sitemap</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/5@1x.png" srcset="images/project1/5@1x.png 1x, images/project1/5@2x.png 2x, images/project1/5@3x.png 3x" alt="Sitemap of Ink Tank App">
     </div>
     <div class="project-text">
@@ -89,8 +99,10 @@
       <p>1) I added the possibility to save made photos in Augmented Reality and possibility to add them in "category Tattoo Designs in Favourites"<br>
          2) Changed the screen" Tattoo sketch" to "Tattoo Design" because not all users understood clear what is a sketch.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Low-Fidelity Prototype for Mobile</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/6@1x.png" srcset="images/project1/6@1x.png 1x, images/project1/6@2x.png 2x, images/project1/6@3x.png 3x" alt="Paper low-fidelity prototypes for mobile of Ink Tank App">
     </div>
     <div class="project-text">
@@ -99,23 +111,31 @@
           Only registered users could use a chat.<br>
           The app has a nice function as Augmented Reality which helps to see how a tattoo will look on any part of user's body. A desktop version of the app couldn't have a function of Augmented Reality.</p>
     </div>
-    <div class="project-wrap">
-      <h2>Mid-Fidelity Prototype for Mobile</h2>
-      <img src="images/project1/7@1x.png" srcset="images/project1/7@1x.png 1x, images/project1/7@2x.png 2x, images/project1/7@3x.png 3x" alt="Paper low-fidelity prototypes for desktop of Ink Tank App">
+    <div class="project-text">
+      <h2>Low-Fidelity Prototype for Mobile</h2>
     </div>
     <div class="project-wrap">
+      <img src="images/project1/7@1x.png" srcset="images/project1/7@1x.png 1x, images/project1/7@2x.png 2x, images/project1/7@3x.png 3x" alt="Paper low-fidelity prototypes for desktop of Ink Tank App">
+    </div>
+    <div class="project-text">
       <h2>Mid-Fidelity Prototype for Desktop</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/8@1x.png" srcset="images/project1/8@1x.png 1x, images/project1/8@2x.png 2x, images/project1/8@3x.png 3x" alt="Mid-fidelity prototypes for mobile of Ink Tank App">
     </div>
     <div class="project-wrap">
       <img src="images/project1/9@1x.png" srcset="images/project1/9@1x.png 1x, images/project1/9@2x.png 2x, images/project1/9@3x.png 3x" alt="Mid-fidelity prototypes for desktop of Ink Tank App">
     </div>
-    <div class="project-wrap">
-      <h2>High-Fidelity for Mobile</h2>
-      <img src="images/project1/11@1x.png" srcset="images/project1/11@1x.png 1x, images/project1/11@2x.png 2x, images/project1/11@3x.png 3x" alt="High-fidelity prototypes for desktop of Ink Tank App">
+    <div class="project-text">
+      <h2>High-Fidelity Prototype for Mobile</h2>
     </div>
     <div class="project-wrap">
+      <img src="images/project1/11@1x.png" srcset="images/project1/11@1x.png 1x, images/project1/11@2x.png 2x, images/project1/11@3x.png 3x" alt="High-fidelity prototypes for desktop of Ink Tank App">
+    </div>
+    <div class="project-text">
       <h2>Affinity Diagram</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/12@1x.png" srcset="images/project1/12@1x.png 1x, images/project1/12@2x.png 2x, images/project1/12@3x.png 3x" alt="High-fidelity prototypes for desktop of Ink Tank App">
     </div>
     <div class="project-text">
@@ -126,8 +146,10 @@
          3) negative quotes<br>
          4) errors</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Usability Test Results</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/13@1x.png" srcset="images/project1/13@1x.png 1x, images/project1/13@2x.png 2x, images/project1/13@3x.png 3x" alt="High-fidelity prototypes for desktop of Ink Tank App">
     </div>
     <div class="project-text">
@@ -141,8 +163,10 @@
     <div class="project-wrap">
       <img src="images/project1/14@1x.png" srcset="images/project1/14@1x.png 1x, images/project1/14@2x.png 2x, images/project1/14@3x.png 3x" alt="High-fidelity prototypes for mobile of Ink Tank App">
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Summary Recomendations for Changing Prototype</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/15@1x.png" srcset="images/project1/15@1x.png 1x, images/project1/15@2x.png 2x, images/project1/15@3x.png 3x" alt="Affinity diagram of Ink Tank App">
     </div>
     <div class="project-text">
@@ -157,8 +181,10 @@
       <h3>Issue 5:</h3>
       <p>Changing the page “For you” to Page “Home”.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>A/B Testing</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/16@1x.png" srcset="images/project1/16@1x.png 1x, images/project1/16@2x.png 2x, images/project1/16@3x.png 3x" alt="Usability test results of Ink Tank App">
     </div>
     <div class="project-text">
@@ -167,12 +193,16 @@
          The first page is a winner, but I think that I will choose my own decision and will leave the first page but will transform the sewing needle to tattoo needle how said during
          usability testing by one of the participants.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Style Guide</h2>
-      <img src="images/project1/17@1x.png" srcset="images/project1/17@1x.png 1x, images/project1/17@2x.png 2x, images/project1/17@3x.png 3x" alt="Usability test results of Ink Tank App">
     </div>
     <div class="project-wrap">
+      <img src="images/project1/17@1x.png" srcset="images/project1/17@1x.png 1x, images/project1/17@2x.png 2x, images/project1/17@3x.png 3x" alt="Usability test results of Ink Tank App">
+    </div>
+    <div class="project-text">
       <h2>Final Prototype for Mobile</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project1/18@1x.png" srcset="images/project1/18@1x.png 1x, images/project1/18@2x.png 2x, images/project1/18@3x.png 3x" alt="A/B testing of Ink Tank App">
     </div>
   </section>
