--- a/project2.html
+++ b/project2.html
@@ -29,8 +29,10 @@
   </header>
 
   <section id="container-project">
-    <div class="project-wrap">
+    <div class="project-text">
       <h1 class="title-project">UI Project Fitted Application</h1>
+    </div>
+    <div class="project-wrap">
       <img src="images/project2/1@1x.png" srcset="images/project2/1@1x.png 1x, images/project2/1@2x.png 2x, images/project2/1@3x.png 3x" alt="Mobile mockup with screen of Fitted App">
     </div>
     <div class="project-text">
@@ -41,15 +43,19 @@
          It helps to become healthy and enjoy the associated benefits: better mood, weight management, reduce risks of illness, learning something new.<br><br>
          Workouts should be fun and suited to from beginner to advanced users.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Low-Fidelity Prototype</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project2/2@1x.png" srcset="images/project2/2@1x.png 1x, images/project2/2@2x.png 2x, images/project2/2@3x.png 3x" alt="Brief of Fitted App">
     </div>
     <div class="project-text">
       <p>During the creating low-fidelity prototypes for mobile, I was trying to make a simple Sign Up Page and Log In Page; make a not boring menu adding the icons.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Mid-Fidelity Prototype</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project2/5@1x.png" srcset="images/project2/5@1x.png 1x, images/project2/5@2x.png 2x, images/project2/5@3x.png 3x" alt="Low-fidelity paper prototypes for mobile of Fitted App">
     </div>
     <div class="project-text">
@@ -57,8 +63,10 @@
       <p>When I Developed mid-fidelity prototypes I signed interactions such scroll between Home Page and Menu, clicks and transitions between the pages, hidden functions. At this step already
         I added UI elements as a circle diagram for user's usability.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Moodboard</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project2/6@1x.png" srcset="images/project2/6@1x.png 1x, images/project2/6@2x.png 2x, images/project2/6@3x.png 3x" alt="Mid-fidelity prototypes for mobile of Fitted App">
     </div>
     <div class="project-text">
@@ -68,8 +76,10 @@
         <br>When using the blue colour as the base color, the orange color is perfect as an active color.
         <br>Typography Archivo Black/Archivo Narrow/Arial are an excellent combination for a sports theme.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>High-Fidelity Prototype</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project2/8@1x.png" srcset="images/project2/8@1x.png 1x, images/project2/8@2x.png 2x, images/project2/8@3x.png 3x" alt="Creating logo for Fitted App">
     </div>
     <div class="project-text">
@@ -87,8 +97,10 @@
       <p>For creating high-fidelity prototypes I used Sketch and InVision. I think that is a brilliant idea to create interactive prototypes for clearly understanding the scrolls, clicks,
         transitions as for usability testing as for showing to stakeholders as a prototype project.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Style Guide</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project2/11@1x.png" srcset="images/project2/11@1x.png 1x, images/project2/11@2x.png 2x, images/project2/11@3x.png 3x" alt="Style guide of Fitted App">
     </div>
     <div class="project-text">
@@ -96,9 +108,14 @@
       <br>One of important part is UI Elements and this project requires its individual elements. Main and secondary navigation, primary and secondary buttons, CTA buttons etc.
           Forms and fields. Additional elements as calendar, patient timeline, patients lists of done exercises, graphs, diagrams.</p>
     </div>
+    <div class="project-text">
+      <h2>Mockup for Mobile</h2>
+    </div>
     <div class="project-wrap">
-      <h2>Mockup</h2>
       <img src="images/project2/12@1x.png" srcset="images/project2/12@1x.png 1x, images/project2/12@2x.png 2x, images/project2/12@3x.png 3x" alt="Mobile mockups of Fitted App">
+    </div>
+    <div class="project-text">
+      <h2>Mockup for Tablet</h2>
     </div>
     <div class="project-wrap">
       <img src="images/project2/13@1x.png" srcset="images/project2/13@1x.png 1x, images/project2/13@2x.png 2x, images/project2/13@3x.png 3x" alt="Mobile and tablet mockups of Fitted App">
@@ -113,7 +130,6 @@
     </div>
     <div class="project-text">
       <p> Grateful for the photos provided by @tmarkelova @shilyaeva_irina @kucherskaya</p>
-      <h2>Thank you and have a nice day!</h2>
     </div>
   </section>
 
