--- a/project3.html
+++ b/project3.html
@@ -28,8 +28,10 @@
   </header>
 
   <section id="container-project">
-    <div class="project-wrap">
+    <div class="project-text">
       <h1 class="title-project">UX Project Vocabulary Mobile Application</h1>
+    </div>
+    <div class="project-wrap">
       <img src="images/project3/1@1x.png" srcset="images/project3/1@1x.png 1x, images/project3/1@2x.png 2x, images/project3/1@3x.png 3x" alt="Presentation page of Vocabulary App">
     </div>
     <div class="project-text">
@@ -41,12 +43,16 @@
          This application is meant to be used on-the-go for quick 5– 10-minute study sessions. That could be on a bus or train, waiting between classes, on a lunch break, at home in the evening in bed.<br><br>
          Users need a way to methodically categorize, reference, and study new vocabulary and concepts so they can move forward confidently in their field.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>User Persona</h2>
-      <img src="images/project3/2@1x.png" srcset="images/project3/2@1x.png 1x, images/project3/2@2x.png 2x, images/project3/2@3x.png 3x" alt="User persona of Vocabulary App">
     </div>
     <div class="project-wrap">
+      <img src="images/project3/2@1x.png" srcset="images/project3/2@1x.png 1x, images/project3/2@2x.png 2x, images/project3/2@3x.png 3x" alt="User persona of Vocabulary App">
+    </div>
+    <div class="project-text">
       <h2>User Flow</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project3/3@1x.png" srcset="images/project3/3@1x.png 1x, images/project3/3@2x.png 2x, images/project3/3@3x.png 3x" alt="User persona of Vocabulary App">
     </div>
     <div class="project-text">
@@ -54,12 +60,16 @@
       <p>Entry point is dashboard.<br>
          Success criteria is log in, make a photo, photo recognising than add this translated word to a card, see the possibility to share with friends.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Rapid Prototyping</h2>
-      <img src="images/project3/4@1x.png" srcset="images/project3/4@1x.png 1x, images/project3/4@2x.png 2x, images/project3/4@3x.png 3x" alt=" Problems of user persona of Vocabulary App">
     </div>
     <div class="project-wrap">
+      <img src="images/project3/4@1x.png" srcset="images/project3/4@1x.png 1x, images/project3/4@2x.png 2x, images/project3/4@3x.png 3x" alt=" Problems of user persona of Vocabulary App">
+    </div>
+    <div class="project-text">
       <h2>Low-Fidelity Prototype</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project3/5@1x.png" srcset="images/project3/5@1x.png 1x, images/project3/5@2x.png 2x, images/project3/5@3x.png 3x" alt="User story for Vocabulary App">
     </div>
     <div class="project-text">
@@ -79,8 +89,10 @@
          Minimise steps of choosing the language;<br>
          And some not very important improvements but useful for speedy using.</p>
     </div>
-    <div class="project-wrap">
+    <div class="project-text">
       <h2>Mockup</h2>
+    </div>
+    <div class="project-wrap">
       <img src="images/project3/6@1x.png" srcset="images/project3/6@1x.png 1x, images/project3/6@2x.png 2x, images/project3/6@3x.png 3x" alt="User needs for creating Vocabulary App">
     </div>
   </section>
