--- a/project4.html
+++ b/project4.html
@@ -28,8 +28,10 @@
   </header>
 
   <section id="container-project">
-    <div class="project-wrap">
+    <div class="project-text">
       <h1 class="title-project">Website Puella Present Decor</h1>
+    </div>
+    <div class="project-wrap">
       <img src="images/project4/0@1x.png" srcset="images/project4/0@1x.png 1x, images/project4/0@2x.png 2x, images/project4/0@3x.png 3x" alt="Mockups with screen of Puella website">
     </div>
     <div class="project-text">
@@ -103,7 +105,6 @@
     </div>
     <div class="project-text">
       <p>The project is in development...</p>
-      <h2>Thank you and have a nice day!</h2>
     </div>
   </section>
 
