changed the input "submit" to button "submit"

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </p>
 
             <div class="download-cv"> <!--button to view or download resume-->
-              <input type="submit" value="submit" onClick="window.location. href='images/cv/Skrepinskaya_Natalia_Resume copy.pdf'">
+              <button type="button" value="submit" onClick="window.location. href='images/cv/Skrepinskaya_Natalia_Resume copy.pdf'">submit</button>
             </div>
          </div>
 
@@ -219,7 +219,7 @@
           <label>Message</label>
           <input type="text" required>
         </div>
-        <input type="submit" value="submit" id="validate">
+        <button type="button" value="submit" id="validate">submit</button>
      </form>
     </div>
 
