--- a/project1.html
+++ b/project1.html
@@ -223,7 +223,7 @@
           <label>Message</label>
           <input type="text" required>
         </div>
-        <input type="submit" value="submit" id=validate>
+        <button type="button" value="submit" id="validate">submit</button>
      </form>
     </div>
 
