--- a/project3.html
+++ b/project3.html
@@ -113,7 +113,7 @@
           <label>Message</label>
           <input type="text" required>
         </div>
-        <input type="submit" value="submit" id=validate>
+        <button type="button" value="submit" id="validate">submit</button>
      </form>
     </div>
 
